* [GH-1] Path auto-completion
* [GH-4] Return recommendation type
* [GH-7] Support PrefixeNamed
* [GH-6] Prefix auto-completion
* [GH-10] Add construct/ask/describe query to the grammar
* [GH-12] Support SPARQL expressions
* [GH-14] Skip SPARQL comments
* [GH-16] Support SPARQL builtins
* [GH-18] Support SPARQL filter and bind
* [GH-20] Support SPARQL aggregates
* [GH-22] Support SPARQL solutions modifiers
* [GH-3] Complete SPARQL grammar
* [GH-26] Check if a pattern is a leaf or not
* [GH-28] Update management of whitespace & comments in the PEG grammar
* [GH-31] Add method for getting the subject associated to the POF
* [GH-36] Update YASQE to 2.2.1 and YASRE to 2.0.2
* [GH-38] Support literal recommended items