@@ -15,3 +15,4 @@
 * [GH-31] Add method for getting the subject associated to the POF
 * [GH-36] Update YASQE to 2.2.1 and YASRE to 2.0.2
 * [GH-38] Support literal recommended items
+* [GH-40] Correct path recommendation
